        Score of luna_dev vs luna_main: 251 - 133 - 119  [0.617] 503
      ...      luna_dev playing White: 126 - 68 - 58  [0.615] 252
      ...      luna_dev playing Black: 125 - 65 - 61  [0.620] 251
      ...      White vs Black: 191 - 193 - 119  [0.498] 503
      Elo difference: 83.1 +/- 27.1, LOS: 100.0 %, DrawRatio: 23.7 %
      SPRT: llr 2.2 (100.1%), lbound -2.2, ubound 2.2 - H1 was accepted
  e) reverse futility pruning:
        Score of luna_dev vs luna_main: 215 - 105 - 125  [0.624] 445
      ...      luna_dev playing White: 104 - 53 - 66  [0.614] 223
      ...      luna_dev playing Black: 111 - 52 - 59  [0.633] 222
      ...      White vs Black: 156 - 164 - 125  [0.491] 445
      Elo difference: 87.7 +/- 27.9, LOS: 100.0 %, DrawRatio: 28.1 %
      SPRT: llr 2.2 (100.1%), lbound -2.2, ubound 2.2 - H1 was accepted
  f) razoring:
        Score of luna_dev vs luna_main: 303 - 195 - 239  [0.573] 737
      ...      luna_dev playing White: 149 - 105 - 115  [0.560] 369
      ...      luna_dev playing Black: 154 - 90 - 124  [0.587] 368
  g) use TT lookup in qsearch:

--------------------------------------------------
quick match against VICE (~2050 elo):

Score of luna_dev vs vice: 176 - 42 - 22  [0.779] 240
...      luna_dev playing White: 91 - 23 - 6  [0.783] 120
...      luna_dev playing Black: 85 - 19 - 16  [0.775] 120
...      White vs Black: 110 - 108 - 22  [0.504] 240
Elo difference: 219.0 +/- 49.9, LOS: 100.0 %, DrawRatio: 9.2 %
SPRT: llr 2.2 (100.1%), lbound -2.2, ubound 2.2 - H1 was accepted

quick match against zevra 1.8.6 (2269 elo):

Score of luna_dev vs zevra: 532 - 391 - 134  [0.567] 1057
...      luna_dev playing White: 263 - 194 - 72  [0.565] 529
...      luna_dev playing Black: 269 - 197 - 62  [0.568] 528
...      White vs Black: 460 - 463 - 134  [0.499] 1057
Elo difference: 46.6 +/- 19.7, LOS: 100.0 %, DrawRatio: 12.7 %
SPRT: llr 2.2 (100.3%), lbound -2.2, ubound 2.2 - H1 was accepted
--------------------------------------------------

  h)